testdata/baselines/reference/submodule/conformance/jsDeclarationsClassImplementsGenericsSerialization.errors.txt
lib.js(3,17): error TS2552: Cannot find name 'IEncoder'. Did you mean 'Encoder'?


==== interface.ts (0 errors) ====
    export interface Encoder<T> {
        encode(value: T): Uint8Array
    }
==== lib.js (1 errors) ====
    /**
     * @template T
     * @implements {IEncoder<T>}
                    ~~~~~~~~
!!! error TS2552: Cannot find name 'IEncoder'. Did you mean 'Encoder'?
!!! related TS2728 lib.js:5:14: 'Encoder' is declared here.
     */
    export class Encoder {
        /**
         * @param {T} value 
         */
        encode(value) {
            return new Uint8Array(0)
        }
    }
    
    
    /**
     * @template T
     * @typedef {import('./interface').Encoder<T>} IEncoder
     */